force-app/main/default/objects/Employer_On_Cost__c/Employer_On_Cost__c.object-meta.xml
<CustomObject>
    <description>Holds employer on cost on top of gross pay that need to be taken into consideration when calculating charge rate. This can hold default on-cost values set at a rate schedule level or it could be set at a rate agreement line level</description>
    <label>Employer On Cost</label>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employers On Cost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>