force-app/main/default/objects/Employer_On_Cost__c/fields/Calc_Type__c.field-meta.xml
<CustomField>
    <fullName>Calc_Type__c</fullName>
    <label>Calc Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>