force-app/main/default/objects/Employer_On_Cost__c/fields/On_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>On_Cost_Type__c</fullName>
    <label>On Cost Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>Holiday Pay</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>