force-app/main/default/objects/Employer_On_Cost__c/fields/Rate_Agreement_Lines__c.field-meta.xml
<CustomField>
    <fullName>Rate_Agreement_Lines__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Agreement Lines</label>
    <referenceTo>Rate_Agreement_Lines__c</referenceTo>
    <relationshipLabel>Employers On Cost</relationshipLabel>
    <relationshipName>Employers_On_Cost</relationshipName>
    <type>Lookup</type>
</CustomField>