force-app/main/default/objects/Employer_On_Cost__c/fields/Rate_Agreement_Version__c.field-meta.xml
<CustomField>
    <fullName>Rate_Agreement_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rate Agreement Version</label>
    <referenceTo>Rate_Agreement_Version__c</referenceTo>
    <relationshipLabel>Employers On Cost</relationshipLabel>
    <relationshipName>Employers_On_Cost</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>