force-app/main/default/objects/Employer_On_Cost__c/fields/Worker_Type__c.field-meta.xml
<CustomField>
    <fullName>Worker_Type__c</fullName>
    <label>Worker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAYE</fullName>
            </value>
            <value>
                <fullName>Umbrella</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>